--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <Header>
         <h1>Una giornta al museo</h1>
     </Header>
-    
+<Main>
+    <section>
+        <ol>
+            <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
+            <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
+        </ol>
+    </section>
+</Main>    
 </body>
 </html>
