aggiunta caption ad immagine numero 1

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ol>
             <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
             <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
+            <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
         </ol>
     </section>
 </Main>    
