--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <Main>
     <section>
         <ol>
+            <!--dipinto-->
             <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
             <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
             <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
