--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
             <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
             <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+            <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. È come se raccontasse una storia senza parole.</p>
         </ol>
     </section>
 </Main>    
