aggiunta seconda immagine con titolo numerato e caption. aggiunto anche stile caption

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
             <!--dipinto-->
             <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
             <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
-            <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+            <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
             <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. È come se raccontasse una storia senza parole.</p>
+            <li><strong>Un'antica scultura</strong></li>
+            <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
+            <figcaption><em>romana in marmo esposta nella sala archeologica</em></figcaption>
         </ol>
     </section>
 </Main>    
