aggiunto paragrafo seconda immagine

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><strong>Un'antica scultura</strong></li>
             <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
             <figcaption><em>romana in marmo esposta nella sala archeologica</em></figcaption>
+            <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
         </ol>
     </section>
 </Main>    
