aggiunta intera seconda sezione pagina: aggiunta UL; aggiunta LI*3

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
         </ol>
     </section>
-</Main>    
+</Main>
+<section>
+<h3>Le cose che ho imparato oggi</h3>
+<ul>
+    <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
+    <li>Molti dipinti nascondono simboli e significati nascosti</li>
+    <li>ogni opera ha una storia unica</li>
+</ul> 
+</section>   
 </body>
 </html>
