aggiunta struttura footer

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <li>Molti dipinti nascondono simboli e significati nascosti</li>
     <li>ogni opera ha una storia unica</li>
 </ul> 
-</section>   
+</section>
+<footer>
+    
+</footer>   
 </body>
 </html>
