--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
     <title>Una giornata al Museo</title>
 </head>
 <body>
-    <Header>
+    <header>
         <h1>Una giornta al museo</h1>
-    </Header>
-<Main>
-    <section>
-        <ol>
-            <!--dipinto-->
-            <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
-            <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
-            <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
-            <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. È come se raccontasse una storia senza parole.</p>
-            <li><strong>Un'antica scultura</strong></li>
-            <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
-            <figcaption><em>romana in marmo esposta nella sala archeologica</em></figcaption>
-            <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
-        </ol>
-    </section>
-</Main>
-<section>
+    </header>
+    <main>
+        <section>
+            <ol>
+                <!--dipinto-->
+                <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
+                <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
+                <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
+                <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. È come se raccontasse una storia senza parole.</p>
+                <li><strong>Un'antica scultura</strong></li>
+                <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
+                <figcaption><em>romana in marmo esposta nella sala archeologica</em></figcaption>
+                <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
+            </ol>
+        </section>
+        <section>
 <h3>Le cose che ho imparato oggi</h3>
 <ul>
     <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
@@ -32,8 +31,10 @@
     <li>ogni opera ha una storia unica</li>
 </ul> 
 </section>
+    </main>
+
 <footer>
-    
+
 </footer>   
 </body>
 </html>
