Aggiornamento e modifica struttura Sections main

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     </header>
     <main>
         <section>
-            <ol>
-                <!--dipinto-->
-                <li><strong>Il dipinto che mi ha colpito di pi&ugrave;</strong></li>
+               <h2>1. Il dipinto che mi ha colpito di pi&ugrave;</h2>
                 <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
                 <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
                 <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. È come se raccontasse una storia senza parole.</p>
-                <li><strong>Un'antica scultura</strong></li>
+               <h2>2. Un'antica scultura</h2>
                 <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
-                <figcaption><em>romana in marmo esposta nella sala archeologica</em></figcaption>
+                <figcaption><em>Scultura romana in marmo esposta nella sala archeologica</em></figcaption>
                 <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
-            </ol>
+        
         </section>
         <section>
 <h3>Le cose che ho imparato oggi</h3>
