modifica struttura main con due sections

--- a/index.html
+++ b/index.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Una giornata al Museo</title>
 </head>
+
 <body>
     <header>
         <h1>Una giornta al museo</h1>
     </header>
     <main>
         <section>
-               <h2>1. Il dipinto che mi ha colpito di pi&ugrave;</h2>
-                <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
-                <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
-                <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. È come se raccontasse una storia senza parole.</p>
-               <h2>2. Un'antica scultura</h2>
-                <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
-                <figcaption><em>Scultura romana in marmo esposta nella sala archeologica</em></figcaption>
-                <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
-        
+            <h2>1. Il dipinto che mi ha colpito di pi&ugrave;</h2>
+            <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
+            <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
+            <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio
+                raffigurato. È come se raccontasse una storia senza parole.</p>
+            <h2>2. Un'antica scultura</h2>
+            <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
+            <figcaption><em>Scultura romana in marmo esposta nella sala archeologica</em></figcaption>
+            <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e
+                dell'armatura erano incredibilmente realistici.</p>
+
         </section>
         <section>
-<h3>Le cose che ho imparato oggi</h3>
-<ul>
-    <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
-    <li>Molti dipinti nascondono simboli e significati nascosti</li>
-    <li>ogni opera ha una storia unica</li>
-</ul> 
-</section>
+            <h3>Le cose che ho imparato oggi</h3>
+            <ul>
+                <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
+                <li>Molti dipinti nascondono simboli e significati nascosti</li>
+                <li>ogni opera ha una storia unica</li>
+            </ul>
+        </section>
     </main>
 
-<footer>
+    <footer>
 
-</footer>   
+    </footer>
 </body>
+
 </html>
