aggiunta paragrafo in footer

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
             </ul>
         </section>
     </main>
-
     <footer>
-
+        <p>&copy; 2025 Paolo Mucedero</p>
     </footer>
 </body>
 
