modifica e aggiunta annotazioni struttura

--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
         <h1>Una giornta al museo</h1>
     </header>
     <main>
-        <section>
+        <section> <!--sezione dipinto/scultura-->
+            <div> <!-- PRIMA IMMAGINE con caption e paragrafo-->
             <h2>1. Il dipinto che mi ha colpito di pi&ugrave;</h2>
             <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
             <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
             <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio
                 raffigurato. È come se raccontasse una storia senza parole.</p>
+            </div>
+            <div> <!-- SECONDA IMMAGINE con caption e paragrafo-->
             <h2>2. Un'antica scultura</h2>
             <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
             <figcaption><em>Scultura romana in marmo esposta nella sala archeologica</em></figcaption>
             <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e
                 dell'armatura erano incredibilmente realistici.</p>
-
+            </div>    
         </section>
-        <section>
+        <section> <!--sezione lista-->
             <h3>Le cose che ho imparato oggi</h3>
             <ul>
                 <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
