--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Una giornta al museo</h1>
+        <h1>Una giornata al museo</h1>
     </header>
     <main>
         <section> <!--sezione dipinto/scultura-->
