chore: modificata sintassi codice

--- a/index.html
+++ b/index.html
@@ -18,20 +18,28 @@
                 <h2>1. Il dipinto che mi ha colpito di pi&ugrave;</h2>
                 <figure> <!--tag figure per identificare immagine all'interno dell'articolo-->
                     <img src="./quadro.png" alt="Un'operad'arte affascinante vista nella galleria principale">
-                    <figcaption><em>Un'opera d'arte affascinante vista nella galleria principale.</em></figcaption>
+                    <figcaption><em>
+                        Un'opera d'arte affascinante vista nella galleria principale.
+                    </em></figcaption>
                 </figure>
-                <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del
+                <p>
+                    Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del
                     personaggio
-                    raffigurato. È come se raccontasse una storia senza parole.</p>
+                    raffigurato. È come se raccontasse una storia senza parole.
+                </p>
             </article>
             <article> <!-- SECONDA IMMAGINE con caption e paragrafo-->
                 <h2>2. Un'antica scultura</h2>
                 <figure>
                 <img src="./scultura.png" alt="Scultura romana in marmo esposta nella sala archeologica">
-                <figcaption><em>Scultura romana in marmo esposta nella sala archeologica</em></figcaption>
+                <figcaption><em>
+                    Scultura romana in marmo esposta nella sala archeologica
+                </em></figcaption>
                 </figure>
-                <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e
-                    dell'armatura erano incredibilmente realistici.</p>
+                <p>
+                    La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e
+                    dell'armatura erano incredibilmente realistici.
+                </p>
             </article>
         </section>
         <section> <!--sezione lista-->
